TestRepo2/src/objects/HomeVideo__c.object
<CustomObject>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, video will be displayed on the home page</description>
        <label>current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>short video description</description>
        <label>description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>videoId__c</fullName>
        <description>BrightCove Video Id</description>
        <label>video id</label>
        <length>13</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Home Video</label>
    <listViews>
        <fullName>All</fullName>
        <columns>current__c</columns>
        <columns>videoId__c</columns>
        <columns>description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Home video Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Home Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>